@@ -47,6 +47,8 @@ signature generation.
 However, the serialization method, hash algorithm and signature format
 can be customized, as needed.
 
+=for readme stop
+
 =head1 EXPORTS
 
 =head2 C<signature>
@@ -213,6 +215,8 @@ algorithm.
 
 This module is I<not> intended for hashing passwords.
 
+=for readme continue
+
 =head1 SEE ALSO
 
 =head2 Similar Modules
@@ -230,6 +234,8 @@ produce the same signature for the same data. (This does not mean that
 L<Storable> is unable to de-serialize data produced by different
 versions; it only means that the serialized data is not identical
 across different versions.)
+
+=for readme stop
 
 L<Object::Signature> does not allow for customizing the hash algorithm
 or signature format.
@@ -250,6 +256,8 @@ generated by L<Object::Signature>, using the following:
 As noted above, using L<Storable> will not produce portable
 signatures.
 
+=for readme continue
+
 =back
 
 =head1 AUTHOR
@@ -265,6 +273,8 @@ under the terms of the the Artistic License (2.0). You may obtain a
 copy of the full license at:
 
 L<http://www.perlfoundation.org/artistic_license_2_0>
+
+=for readme stop
 
 Any use, modification, and distribution of the Standard or Modified
 Versions is governed by this Artistic License. By using, modifying or
@@ -295,6 +305,8 @@ YOUR LOCAL LAW. UNLESS REQUIRED BY LAW, NO COPYRIGHT HOLDER OR
 CONTRIBUTOR WILL BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, OR
 CONSEQUENTIAL DAMAGES ARISING IN ANY WAY OUT OF THE USE OF THE PACKAGE,
 EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+=for readme continue
 
 =cut
 
