@@ -5,6 +5,8 @@ Revision history for perl distirubton Object-Signature-Portable
   - Added subsections to the LIMITATIONS section about Portability and
     Security, and moved a note about the hash algorithm to the latter.
 
+  - Removed details from README.
+
   [Other Changes]
   - Removed unnecessary dependency from Makefile.PL.
 
